objects/Product2/fields/Marketing_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Name__c</fullName>
    <label>Marketing Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>